added some styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 		<script src="/java/script.js"></script>
 		<title>Magic 8 Ball</title>
 		
-		
-		
-		
 </head>
 <body>
 	
@@ -19,11 +16,11 @@
 	<div class="col-md-6">
 	<div class="card shadow my-5">
 	<div class="card-header">
-		<h1>Magic 8 Ball</h1>
+		<h1>MAGIC&nbsp;<span>8</span>&nbsp;BALL</h1>
 	</div>
 	<div class="card-body">
 		
-	<img src= "/img/magic8ball_empty.png" width="305" height="312" id="myPicture" class="center" >
+	<img src= "/img/magic8ball_empty.png" width="305" height="345" id="myPicture" class="center" >
 
 	<form>
 		<div class="form-group">
@@ -32,6 +29,10 @@
 		</div>
 
 		<button onclick="choosePic()" class="center" name="askBtn">Ask Me Anything</button>
+		<br>
+		<footer>
+			<p>&copy; Meller 2022</p>
+		</footer>
 	</form>
 	</div>
 	<div class="card-footer" id="answers">
@@ -40,7 +41,7 @@
 			  </div>
 			</div>
 		</div>
-
+	
 		
 	   </body>
 	  </html>
