--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				  <br>
 				  <br>
 				  <!---image in form-->
-				  <img src="/img/magic8ball_empty.png" id="myPic" class="center" width="305" height="305"  >
+				  <img src="./img/magic8ball_empty.png" id="myPic" class="center" width="305" height="305"  >
 				</form>
 			  </div>
 			  <!--question output bottom of form-->
