--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="/css/styles.css">
+		<link rel="stylesheet" href="css/styles.css">
 		
 		<title>Magic 8 Ball</title>
 		
@@ -37,7 +37,7 @@
 				  <br>
 				  <br>
 				  <!---image in form-->
-				  <img src="./img/magic8ball_empty.png" id="myPic" class="center" width="305" height="305"  >
+				  <img src="img/magic8ball_empty.png" id="myPic" class="center" width="305" height="305"  >
 				</form>
 			  </div>
 			  <!--question output bottom of form-->
@@ -51,6 +51,6 @@
 		</div>
 	  </div>
 	  <!--script execution-->
-		<script src="/java/script.js"></script>
+		<script src="java/script.js"></script>
  </body>
 </html>
